# AnimeWorld-API

./: .gitignore  CONTRIBUTING.md  README.it.md  README.md  REV.md  TODO.md  animeworld.py  index.html  mkdocs.yml  pyproject.toml  readme.md  reame.md  requirements.txt  server.py  setup.py  swagger.yaml  test.py
.github/: FUNDING.yml
.github/workflows/: deploy-mkdocs.yml  gh-pages.yml  publish-override.yml  python-publish.yml  python-test.yml
animeworld/: __init__.py  anime.py  episodio.py  exceptions.py  globals.py  server.py  utility.py
animeworld/servers/: AnimeWorld_Server.py  Server.py  Streamtape.py  YouTube.py  __init__.py
docs/: index.en.md  index.it.md  index.md
docs/api-reference/: developer-interface.md  exceptions.md
docs/community/: code-of-conduct.md  contributing.en.md  contributing.it.md  contributing.md  third-party-packages.md
docs/static/: example.py  server.md  server.txt
docs/static/overrides/partials/languages/: custom.html
docs/usage/: advanced.en.md  advanced.it.md  advanced.md  quickstart.en.md  quickstart.it.md  quickstart.md
documentation/: example.py
documentation/wiki/: Classi.md  Exceptions.md  Funzioni.md  Home.md
rev/: REV.md
tests/: test_animeworld.py
